--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "java.project.sourcePaths": [
         "LucasAndre_PRO/T4/src",
-        "LucasAndre_PRO/T3/EjerciciosT3"
+        "LucasAndre_PRO/T3/EjerciciosT3",
+        "LucasAndre_PRO/T4/EjerciciosT4"
     ]
 }
